fix overflow

--- a/src/static/css/responsive.scss
+++ b/src/static/css/responsive.scss
@@ -464,6 +464,9 @@
     }
     .app {
         .wrapper {
+
+            overflow-x:hidden;
+
             .filters {
                 .field-container {
                     width: 100%;
